Revert "validation spacing fixes"
This reverts commit a5aa5b2310b8f44c6fad2b17e4f863dd5a103442.

--- a/src/WebformElement/styles.pcss
+++ b/src/WebformElement/styles.pcss
@@ -47,13 +47,6 @@ fieldset.formrow {
   }
 }
 
-/* Validation wrapper */
-
-.validation-message-wrapper {
-  margin: 0;
-  padding: 0;
-}
-
 /* Field Description */
 
 .description-before,
@@ -74,9 +67,15 @@ fieldset.formrow {
     @media (min-width: 768px) {
       padding-left: calc(var(--spacingUnit) / 2);
       margin-left: 50%;
-      float: left;
     }
   }
+}
+
+/* Validation wrapper */
+
+.validation-message-wrapper {
+  margin: 0;
+  padding: 0;
 }
 
 /* Prefix & Suffix */
